# DUL-Privacy-Suite

./: .gitignore  Cargo.toml  LICENSE  README.md  WHITEPAPER.md  build_release.ps1  launch_standalone.bat  rebuild_gui.ps1
gui/: package-lock.json  package.json  tailwind.config.js  test.html  tsconfig.json
gui/src/: App.css  App.tsx  tauri.d.ts
gui/src-tauri/: Cargo.toml  Start Privacy Suite.bat  tauri.conf.json
gui/src-tauri/src/: lib.rs
gui/src/components/: Dashboard.tsx  Logs.tsx
gui/target_new/: .rustc_info.json
gui/target_new/release/: libprivacy_suite.d  privacy_suite.d
gui/target_new/release/.fingerprint/Inflector-58ff214d5419c994/: lib-inflector  lib-inflector.json
gui/target_new/release/.fingerprint/Inflector-c727d22e5972ab3a/: lib-inflector  lib-inflector.json
gui/target_new/release/.fingerprint/adler2-ba37f557ce41c039/: lib-adler2  lib-adler2.json
gui/target_new/release/.fingerprint/aead-3e6619e725f6b2a6/: lib-aead  lib-aead.json
gui/target_new/release/.fingerprint/aes-c8e915bad7e71948/: lib-aes  lib-aes.json
gui/target_new/release/.fingerprint/ahash-05e785827211bb3e/: run-build-script-build-script-build  run-build-script-build-script-build.json
gui/target_new/release/.fingerprint/ahash-2ce22696f667853a/: lib-ahash  lib-ahash.json
gui/target_new/release/.fingerprint/ahash-c154b7df08acbda8/: build-script-build-script-build  build-script-build-script-build.json
gui/target_new/release/.fingerprint/aho-corasick-5c838bdeec3b979b/: lib-aho_corasick  lib-aho_corasick.json
gui/target_new/release/.fingerprint/aho-corasick-ea5767ceefa34819/: lib-aho_corasick  lib-aho_corasick.json
gui/target_new/release/.fingerprint/amplify-cdd4c3169ef38eef/: lib-amplify  lib-amplify.json
src/: blockchain.rs  blocklist.rs  config.rs  crypto.rs  dns.rs  fingerprint.rs  gui.rs  ipv6_protection.rs  kill_switch.rs  lib.rs  main.rs  network.rs  proxy.rs  routing.rs  system_proxy.rs  tor_network.rs  web_api.rs  webrtc_protection.rs
(+1536 files in other folders)
